kubernetes/svc-frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-frontend
  labels:
    app: svc-frontend
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: node-frontend
